fixes social icons alignment

--- a/wip/styles/main.less
+++ b/wip/styles/main.less
@@ -240,11 +240,11 @@
 }
 
 #whatsappButton{
-  display: none;
+  // display: none;
 }
 
 .whatsapp-share-button{
-  display: block;
+  display: inline-block;
   border-radius: 4px;
   background: #43C553;
   color: #fff;
